[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://src/Menu/Background.png" type="Texture" id=2]
[ext_resource path="res://src/Menu/play_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://src/Menu/levels_button.png" type="Texture" id=4]
[ext_resource path="res://src/Menu/levels_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://src/Menu/settings_button.png" type="Texture" id=6]
[ext_resource path="res://src/Menu/settings_button_pressed.png" type="Texture" id=7]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/play_button.png-c23f14cfdd0d3bf6b305e3b5c1aafa32.stex"

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( -11.2527, 0 )
scale = Vector2( 0.13, 0.134 )
texture = ExtResource( 2 )
centered = false

[node name="Buttons" type="Node" parent="."]

[node name="PlayButton" type="TextureButton" parent="Buttons"]
margin_left = 283.852
margin_top = 302.914
margin_right = 1133.85
margin_bottom = 558.914
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.55, 0.55 )
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = SubResource( 1 )
texture_pressed = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsButton" type="TextureButton" parent="Buttons"]
margin_left = 304.101
margin_top = 460.387
margin_right = 1154.1
margin_bottom = 674.387
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.55, 0.55 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="Buttons"]
margin_left = 14.3538
margin_top = 453.171
margin_right = 366.354
margin_bottom = 804.171
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_focused = ExtResource( 7 )
[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
